Fixed header z-index so that calendar does not have to worry about it

--- a/assets/sass/components/_layout.scss
+++ b/assets/sass/components/_layout.scss
@@ -18,7 +18,7 @@ html {
 	right: 0;
 	top: 0;
 
-	z-index: 1;
+	z-index: 1000;
 	background: #fff;
 	box-shadow: 0 0 6px rgba(#000, .07);
 	font-family: $title-font;
